# data-lifecycle-management

./: .gitignore  DEVOPS.md  README.md
alloy-monitoring/: README.md  (+1 more)
export-ingester/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
export-ingester/export_ingester/: archive_export.py  config.py  ingest.py  main.py  sftp.py  utils.py  worker.py
export-ingester/export_ingester/api_client/: __init__.py  client.py  models.py
export-ingester/export_ingester/test_utils/: api.py  models.py  utils.py
prince-archiver/: .env.example  .flake8  .gitignore  Dockerfile  README.md  archive-migration.py  behave.ini  compose.aretha.yml  compose.dev.yml  compose.migrator.yml  compose.override.yml  compose.prod.yml  compose.stream.yml  compose.test.yml  compose.yml  docker-compose.yml  ping.py  pyproject.toml  stream_ingester.py
prince-archiver/alembic/: env.py
prince-archiver/alembic/versions/: 0da0ab1f1750_add_src_dir_info_table.py  0e845f6803d9_init.py  35ea6f897530_init.py  3af106eefb24_add_v2_models.py  3f3c30303617_add_v2_models.py  43dbc0d000fb_init.py  6743989c9146_initial.py  6c3b670fecec_video_model.py  72d130e9b517_restructure_archive_tables.py  7cbc38a986ff_remove_deletion_event.py  807734258e7b_init.py  8e4ca8eaeea7_add_data_archive_entry_table.py  9187f0fe0730_remove_param_tables.py  92facd817ef9_init.py  9948b505e925_update_src_dir_info.py  afe1cabcc32b_remove_staging_path.py  ba7817fc8944_change_size_from_integer_to_biginteger.py  c3f2bbbaa7fe_v2_models.py  d25b5aa9841d_remove_tables.py  d4d4675d4e0e_init.py  d8543fa09f16_move_json_fields.py  f465ef38ecbf_init.py  feec4cef9d55_remove_bucket_field.py
prince-archiver/config/: config.alloy  delete-expired-files.xml  promtail.yaml
prince-archiver/data/: payload.json
prince-archiver/data/input/: .gitignore
prince-archiver/prince_archiver/: __main__.py  celery_app.py  config.py  db.py  definitions.py  dto.py  file.py  handlers.py  log.py  logging.yml  main.py  messagebus.py  models.py  object_storage.py  prestart.py  prestart_db.py  prestart_redis.py  test_utils.py  utils.py  watcher.py  worker.py
prince-archiver/prince_archiver/adapters/: archiver.py  file.py  ingester.py  messenger.py  repository.py  s3.py  streams.py  subscriber.py
prince-archiver/prince_archiver/api/: __init__.py  routes.py  utils.py
prince-archiver/prince_archiver/celery/: __init__.py  app.py  base_task.py  task.py  tasks.py
prince-archiver/prince_archiver/data_archive/: __init__.py  archiver.py  dto.py  handlers.py  reporter.py  subscriber.py  worker.py
prince-archiver/prince_archiver/domain/: models.py  value_objects.py
prince-archiver/prince_archiver/entrypoints/: __init__.py  cli.py  mock_prince.py  timestep_generator.py  watcher.py
prince-archiver/prince_archiver/models/: __init__.py  mappers.py  read.py  types.py  v1.py  v2.py  write.py
prince-archiver/prince_archiver/service_layer/: exceptions.py  export.py  external_dto.py  messagebus.py  messages.py  metadata.py  streams.py  uow.py
prince-archiver/prince_archiver/templates/: daily-report.json.jinja  daily-stats.json.jinja
prince-archiver/prince_archiver/test_utils/: __init__.py  cli.py  mock_prince.py  utils.py
prince-archiver/prince_archiver/upload_worker/: dto.py  handlers.py  worker.py
prince-archiver/prince_archiver/watcher/: __init__.py  context.py  filters.py  handlers.py  main.py  utils.py
prince-archiver/scripts/: backup-db.sh  backup-redis.sh  init-dev.sh  init-localstack.sh  prestart.sh  run-e2e-tests.sh  run-integration-tests.sh
prince-archiver/sql/: create_tables.sql
prince-archiver/tests/: compose.e2e.yml  compose.integration.yml
prince-archiver/tests/e2e/: environment.py  fixtures.py  tests.sh  upload.feature
prince-archiver/tests/integration/: conftest.py  test_api.py  test_archive_file_manager.py  test_async_file_system.py  test_daily_stats_model.py  test_data_archive_entry_repo.py  test_event_ingester.py  test_file.py  test_imaging_events_repo.py  test_mappers.py  test_read_models.py  test_read_repo.py  test_repository.py  test_streams.py  test_subscriber.py
prince-archiver/tests/unit/: conftest.py  test_delete_src.py  test_dto.py  test_event_ingester_queue.py  test_external_dto.py  test_file.py  test_file_integrations.py  test_managed_background.py  test_messagebus.py  test_upload_worker.py
prince-stitcher/: .gitignore  Dockerfile  README.md  compose.test.yml  compose.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
prince-stitcher/example/: stitch.py
prince-stitcher/image_stitcher/: consumer.py  handler.py  log.py  logging.yml  main.py  startup.py  stitcher.py  subscriber.py  test_utils.py  utils.py  watcher.py
prince-stitcher/prince-stitcher/: Dockerfile  stitch-start.sh
prince-stitcher/prince-stitcher/scripts/: stitch.ijm
prince-stitcher/scratch/: stitch.py
prince-stitcher/scripts/: install-fiji.sh  run-tests.sh  startup.sh
prince-stitcher/tests/: test_stitching.py
slurm-uploader/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
slurm-uploader/example/: submit.py
slurm-uploader/scripts/: archive.sh  broadcast.sh  install-environment.sh  propagate-result.sh  run-basic.sh  run.sh  scheduler.sh
slurm-uploader/slurm_uploader/: __main__.py  cli.py  client.py  config.py  publisher.py  slurm.py  subscriber.py
slurm-uploader/slurm_uploader/templates/: hello-world.sh.jinja
snellius-stitcher/: pyproject.toml
snellius-stitcher/snellius_stitcher/: __main__.py  render.py
snellius-stitcher/snellius_stitcher/templates/: run.sh.jinja
surf-archiver/: .env.example  .gitignore  Dockerfile  README.md  compose.prod.yml  compose.yml  development.md  env.example  pyproject.toml
surf-archiver/scripts/: entrypoint.sh  prestart.sh  run-tests.sh
surf-archiver/surf_archiver/: abc.py  archiver.py  cli.py  config.py  definitions.py  file.py  init_data.py  log.py  main.py  utils.py
surf-archiver/surf_archiver/remote/: client.py  worker.py
surf-archiver/surf_archiver/scripts/: write_env_file.py
surf-archiver/tests/: compose.yml  conftest.py
(+139 files in other folders)
