[tool.poetry]
name = "export-ingester"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
arq = "^0.26.1"
asyncssh = "^2.17.0"
httpx = "^0.27.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
fastapi-cli-slim = "^0.0.5"
fastapi-slim = "^0.115.0"


[tool.poetry.group.test.dependencies]
mypy = "^1.12.1"


[tool.mypy]
exclude = ["tests"]
plugins = "pydantic.mypy"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
