[tool.poetry]
name = "prince-archiver"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
boto3 = "^1.34.40"
celery = {extras = ["librabbitmq"], version = "^5.3.6"}
opencv-contrib-python-headless = "^4.9.0.80"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
s3fs = "^2024.3.0"
sqlalchemy = {extras = ["postgresql-psycopg2binary"], version = "^2.0.27"}
typer = "^0.9.0"
watchfiles = "^0.21.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
boto3-stubs = {extras = ["essential"], version = "^1.34.40"}
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.0"
types-pyyaml = "^6.0.12.12"

[tool.poetry.scripts]
cli = "prince_archiver.entrypoints.cli:app"
watch = "prince_archiver.entrypoints.watcher:main"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = [
    "celery",
    "celery.utils.log"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
