[tool.poetry]
name = "image-stitcher"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.2.1"
numpy = "^1.26"
opencv-python-headless = "^4.9.0.80"
pyimagej = "1.5.0"
pydantic = "^2.6.4"
pyyaml = "^6.0.1"
redis = "^5.0.7"
s3fs = "^2024.3.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
ruff = "^0.5.0"


[tool.poetry.group.example.dependencies]
httpx = "^0.27.0"


[tool.mypy]
plugins = "pydantic.mypy"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
