[tool.poetry]
name = "surf-archiver"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
s3fs = "^2024.3.1"
typer = "^0.12.3"

[tool.poetry.scripts]
surf-archiver = 'surf_archiver.cli:app'


[tool.isort]
profile = "black"


[[tool.mypy.overrides]]
module = [
    "s3fs"
]
ignore_missing_imports = true


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
